@@ -140,6 +140,10 @@ Bug Fixes
   IndexWriter to only delete files matching this pattern from an index
   directory, to reduce risk when the wrong index path is accidentally
   passed to IndexWriter (Robert Muir, Mike McCandless)
+  
+* LUCENE-4277: Fix IndexWriter deadlock during rollback if flushable DWPT
+  instance are already checked out and queued up but not yet flushed. 
+  (Simon Willnauer)
 
 Changes in Runtime Behavior
 
